# invites

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Cargo.toml  Dockerfile  compose.yaml  mise.toml  tailwind.css
docs/adr/: 0001-data-layer.md  0002-styling-tailwind.md  0003-containerization.md
src/: main.rs  shared.rs
src/api/: dashboard.rs  invites.rs  mod.rs  signup.rs
src/components/: create_invite_form.rs  home.rs  invite.rs  invite_list.rs  invite_row.rs  logo.rs  mod.rs
src/server/: config.rs  db.rs  kanidm.rs  migration.rs  mod.rs  models.rs  oidc.rs  session.rs
src/server/migration/: m0001_create_invitations.rs
src/server/models/: invitations.rs
