[package]
name = "invites"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack", "router"] }
serde = { version = "1", features = ["derive"] }

# Server-only dependencies. Gated behind the `server` feature so the wasm
# client build never pulls them in.
tokio = { version = "1", features = ["full"], optional = true }
sea-orm = { version = "1", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], optional = true }
sea-orm-migration = { version = "1", default-features = false, features = ["sqlx-sqlite", "runtime-tokio-rustls"], optional = true }
async-trait = { version = "0.1", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
openidconnect = { version = "4", optional = true } # default features: reqwest + rustls-tls
serde_json = { version = "1", optional = true }
anyhow = { version = "1", optional = true }
rand = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }
tracing = { version = "0.1", optional = true }

[features]
default = []
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:tokio",
    "dep:sea-orm",
    "dep:sea-orm-migration",
    "dep:async-trait",
    "dep:reqwest",
    "dep:openidconnect",
    "dep:serde_json",
    "dep:anyhow",
    "dep:rand",
    "dep:base64",
    "dep:tracing",
]
